methods.basics.Methods.scala.code
def goAndGet() {
  var pas=0
  while(estSurBiscuit()==false){
    avance()
    pas=pas+1
  }
  prendbiscuit()
  gauche()
  gauche()
  for (i <- 1 pas){
    avance()
  }
  droite()
  droite()
}

for (i <- 1 to 7) {
    goAndGet();
    right();
    forward();
    left();
}